--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "jest": "^27.1.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
